@@ -2,7 +2,6 @@ package world.bentobox.bentobox;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.apache.commons.lang.exception.ExceptionUtils;
 import org.bukkit.Bukkit;
@@ -23,7 +22,6 @@ import world.bentobox.bentobox.database.DatabaseSetup;
 import world.bentobox.bentobox.hooks.DynmapHook;
 import world.bentobox.bentobox.hooks.MultiverseCoreHook;
 import world.bentobox.bentobox.hooks.VaultHook;
-import world.bentobox.bentobox.hooks.WorldEditHook;
 import world.bentobox.bentobox.hooks.placeholders.PlaceholderAPIHook;
 import world.bentobox.bentobox.listeners.BannedCommands;
 import world.bentobox.bentobox.listeners.BlockEndDragon;
@@ -37,6 +35,7 @@ import world.bentobox.bentobox.managers.BlueprintsManager;
 import world.bentobox.bentobox.managers.CommandsManager;
 import world.bentobox.bentobox.managers.FlagsManager;
 import world.bentobox.bentobox.managers.HooksManager;
+import world.bentobox.bentobox.managers.IslandChunkDeletionManager;
 import world.bentobox.bentobox.managers.IslandDeletionManager;
 import world.bentobox.bentobox.managers.IslandWorldManager;
 import world.bentobox.bentobox.managers.IslandsManager;
@@ -71,6 +70,7 @@ public class BentoBox extends JavaPlugin {
     private HooksManager hooksManager;
     private PlaceholdersManager placeholdersManager;
     private IslandDeletionManager islandDeletionManager;
+    private IslandChunkDeletionManager islandChunkDeletionManager;
     private WebManager webManager;
 
     // Settings
@@ -103,7 +103,7 @@ public class BentoBox extends JavaPlugin {
             logWarning("BentoBox is tested only on the following Spigot versions:");
 
             List<String> versions = ServerCompatibility.ServerVersion.getVersions(ServerCompatibility.Compatibility.COMPATIBLE, ServerCompatibility.Compatibility.SUPPORTED)
-                    .stream().map(ServerCompatibility.ServerVersion::toString).collect(Collectors.toList());
+                    .stream().map(ServerCompatibility.ServerVersion::toString).toList();
 
             logWarning(String.join(", ", versions));
             logWarning("**************************************");
@@ -159,7 +159,6 @@ public class BentoBox extends JavaPlugin {
 
         // Load hooks
         hooksManager = new HooksManager(this);
-        hooksManager.registerHook(new VaultHook());
 
         // Load addons. Addons may load worlds, so they must go before islands are loaded.
         addonsManager = new AddonsManager(this);
@@ -172,12 +171,15 @@ public class BentoBox extends JavaPlugin {
                 completeSetup(loadTime);
             } catch (Exception e) {
                 fireCriticalError(e.getMessage(), "");
+                e.printStackTrace();
             }
         });
     }
 
     private void completeSetup(long loadTime) {
         final long enableStart = System.currentTimeMillis();
+        hooksManager.registerHook(new VaultHook());
+
         hooksManager.registerHook(new PlaceholderAPIHook());
         // Setup the Placeholders manager
         placeholdersManager = new PlaceholdersManager(this);
@@ -227,7 +229,6 @@ public class BentoBox extends JavaPlugin {
 
         // Register additional hooks
         hooksManager.registerHook(new DynmapHook());
-        hooksManager.registerHook(new WorldEditHook());
         // TODO: re-enable after rework
         //hooksManager.registerHook(new LangUtilsHook());
 
@@ -296,6 +297,7 @@ public class BentoBox extends JavaPlugin {
         // Death counter
         manager.registerEvents(new DeathListener(this), this);
         // Island Delete Manager
+        islandChunkDeletionManager = new IslandChunkDeletionManager(this);
         islandDeletionManager = new IslandDeletionManager(this);
         manager.registerEvents(islandDeletionManager, this);
     }
@@ -333,7 +335,7 @@ public class BentoBox extends JavaPlugin {
      * @since 1.16.0
      */
     public PlayersManager getPlayersManager() {
-        return playersManager;
+        return getPlayers();
     }
 
     /**
@@ -352,7 +354,7 @@ public class BentoBox extends JavaPlugin {
      * @since 1.16.0
      */
     public IslandsManager getIslandsManager() {
-        return islandsManager;
+        return getIslands();
     }
 
     private static void setInstance(BentoBox plugin) {
@@ -523,6 +525,13 @@ public class BentoBox extends JavaPlugin {
      */
     public IslandDeletionManager getIslandDeletionManager() {
         return islandDeletionManager;
+    }
+
+    /**
+     * @return the islandChunkDeletionManager
+     */
+    public IslandChunkDeletionManager getIslandChunkDeletionManager() {
+        return islandChunkDeletionManager;
     }
 
     /**
